# CollegeFantasyFootball

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: secret-scan.yml
backend/: CMakeLists.txt  Dockerfile  README.md
backend/db/: schema.sql  stat_keys.md
backend/src/: cfbd_ingest.cpp  cfbd_ingest.h  json_utils.cpp  json_utils.h  league_models.cpp  league_models.h  main.cpp  player_catalog.cpp  player_catalog.h
backend/src/handlers/: league_handler.cpp  league_handler.h
docs/: architecture.md  ingestion_cfbd.md  secrets.md  windows-setup.md
frontend/: Dockerfile  app.js  auth.js  index.html  league.html  league.js  nginx.conf  players.html  players.js  signin.html  style.css  test.html
scripts/: generate_dev_certs.ps1  ingest_cfbd.py  install_dependencies.sh  install_openssl.ps1  install_postgres_pgadmin.ps1  install_postgres_pgadmin.sh  install_windows.ps1
